codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_queue_full.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                                        "
"› Test                                                                                                                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  tab 加入队列                                                                                          上下文剩余 98%  " Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " "), (105, " "), (107, " "), (109, " "), (111, " "), (113, " ")]
