codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› 让 Codex 做点什么                                                                                 " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " ")]
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  / 打开命令                       ! 本地命令                                                       " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (38, " "), (40, " "), (42, " "), (44, " ")]
"  shift + enter 换行               tab 加入队列                                                     " Hidden by multi-width symbols: [(17, " "), (19, " "), (40, " "), (42, " "), (44, " "), (46, " ")]
"  @ 文件路径                       ctrl + v 粘贴图片                                                " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (45, " "), (47, " "), (49, " "), (51, " ")]
"  ctrl + g 在外部编辑器编辑        esc 再按一次编辑上一条消息                                       " Hidden by multi-width symbols: [(12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " "), (60, " ")]
"  ctrl + c 退出                                                                                     " Hidden by multi-width symbols: [(12, " "), (14, " ")]
"  ctrl + t 查看记录                                                                                 " Hidden by multi-width symbols: [(12, " "), (14, " "), (16, " "), (18, " ")]
